2019-1/221/users/3048/executions/1653_1055.log
== SUBMITION (2019-04-15 23:11:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
v0 = float(input("Valor da velocidade inicial em m/s:"))
a = radians(float(input("Valor do angulo em graus:")))
D = float(input("Valor da distancia horizontal:"))
g = 9.8
R = (v0**2) * sin(2 * a) /  g
t = abs(D - R)

if (t < 0.1):
	mensagem = "sim"
	print(mensagem)
else:
	mensagem = "nao"
	print(mensagem)
-- EXECUTION TIME:
0.173346
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1653/1055/main.py", line 5, in <module>
    a = radians(float(input()))
NameError: name 'radians' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:12:07) 
-- CODE:

v0 = float(input("Valor da velocidade inicial em m/s:"))
a = radians(float(input("Valor do angulo em graus:")))
D = float(input("Valor da distancia horizontal:"))
g = 9.8
R = (v0**2) * sin(2 * a) /  g
t = abs(D - R)

if (t < 0.1):
	mensagem = "sim"
	print(mensagem)
else:
	mensagem = "nao"
	print(mensagem)
-- EXECUTION TIME:
0.236293
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1653/1055/main.py", line 3, in <module>
    a = radians(float(input()))
NameError: name 'radians' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:12:11) 
-- CODE:
v0 = float(input("Valor da velocidade inicial em m/s:"))
a = radians(float(input("Valor do angulo em graus:")))
D = float(input("Valor da distancia horizontal:"))
g = 9.8
R = (v0**2) * sin(2 * a) /  g
t = abs(D - R)

if (t < 0.1):
	mensagem = "sim"
	print(mensagem)
else:
	mensagem = "nao"
	print(mensagem)
-- EXECUTION TIME:
0.185481
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1653/1055/main.py", line 2, in <module>
    a = radians(float(input()))
NameError: name 'radians' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:12:33) 
-- CODE:
from math import*
v0 = float(input("Valor da velocidade inicial em m/s:"))
a = radians(float(input("Valor do angulo em graus:")))
D = float(input("Valor da distancia horizontal:"))
g = 9.8
R = (v0**2) * sin(2 * a) /  g
t = abs(D - R)

if (t < 0.1):
	mensagem = "sim"
	print(mensagem)
else:
	mensagem = "nao"
	print(mensagem)
-- EXECUTION TIME:
0.182052
-- TEST CASE 1:
---- input:
10.5
45.5
11.3
---- correct output:
sim
---- user output:
sim
-- TEST CASE 2:
---- input:
29.5
17.1
51.0
---- correct output:
nao
---- user output:
nao
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
